// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`platform/comments ensureComment() add comment if not found 1`] = `
Array [
  Array [
    "/2.0/repositories/some/repo/pullrequests/5/comments?pagelen=100",
    undefined,
  ],
]
`;

exports[`platform/comments ensureComment() add comment if not found 2`] = `
Array [
  Array [
    "/2.0/repositories/some/repo/pullrequests/5/comments?pagelen=100",
    undefined,
  ],
]
`;

exports[`platform/comments ensureComment() add updates comment if necessary 1`] = `
Array [
  Array [
    "/2.0/repositories/some/repo/pullrequests/5/comments?pagelen=100",
    undefined,
  ],
]
`;

exports[`platform/comments ensureComment() add updates comment if necessary 2`] = `
Array [
  Array [
    "/2.0/repositories/some/repo/pullrequests/5/comments?pagelen=100",
    undefined,
  ],
]
`;

exports[`platform/comments ensureComment() does not throw 1`] = `
Array [
  Array [
    "/2.0/repositories/some/repo/pullrequests/3/comments?pagelen=100",
    undefined,
  ],
]
`;

exports[`platform/comments ensureComment() skips comment 1`] = `
Array [
  Array [
    "/2.0/repositories/some/repo/pullrequests/5/comments?pagelen=100",
    undefined,
  ],
]
`;

exports[`platform/comments ensureComment() skips comment 2`] = `
Array [
  Array [
    "/2.0/repositories/some/repo/pullrequests/5/comments?pagelen=100",
    undefined,
  ],
]
`;

exports[`platform/comments ensureCommentRemoval() deletes comment if found 1`] = `
Array [
  Array [
    "/2.0/repositories/some/repo/pullrequests/5/comments?pagelen=100",
    undefined,
  ],
]
`;

exports[`platform/comments ensureCommentRemoval() deletes nothing 1`] = `
Array [
  Array [
    "/2.0/repositories/some/repo/pullrequests/5/comments?pagelen=100",
    undefined,
  ],
]
`;

exports[`platform/comments ensureCommentRemoval() does not throw 1`] = `
Array [
  Array [
    "/2.0/repositories/some/repo/pullrequests/5/comments?pagelen=100",
    undefined,
  ],
]
`;
